fix img on mobile

--- a/css/styles.sass
+++ b/css/styles.sass
@@ -53,7 +53,7 @@ h1, h2, h3, h4, h5, h6
         transition-timing-function: ease-in 
 
 /** hero image **/
-    
+
 .jumbotron
     background-image: url(../images/tower-green-sm.png)
     z-index: -10
@@ -66,23 +66,35 @@ h1, h2, h3, h4, h5, h6
 
 @media (min-width: 576px)
     .jumbotron
-        background-image: url('../images/tower-green-sm.png')
+        background-image: url('../images/tower-green-md.png')
+        z-index: -10
+        background-attachment: fixed
+        height: 100%
+        background-position: center
+        background-repeat: no-repeat
+        background-size: cover
 
 // Medium devices (tablets, 768px and up)
 @media (min-width: 768px)
     .jumbotron
-        background-image: url('../images/tower-green-md.png')
+        background-image: url('../images/tower-green-lg.png')
+        z-index: -10
+        background-attachment: fixed
+        height: 100%
+        background-position: center
+        background-repeat: no-repeat
+        background-size: cover
 
 // Large devices (desktops, 992px and up)
 @media (min-width: 992px)
     .jumbotron
-        background-image: url('../images/tower-green-lg.png')
-
-// Extra large devices (large desktops, 1200px and up)
-@media (min-width: 1200px)
-    .jumbotron
         background-image: url('../images/tower-green.png')
-
+        z-index: -10
+        background-attachment: fixed
+        height: 100%
+        background-position: center
+        background-repeat: no-repeat
+        background-size: cover
 
 #welcome
     color: $white-transparent-7
